Fixed debug/profile with librawfx Fixed distribution image (missing librawfx additions)